# agent-test-harness

./: .gitignore  README.md  pyproject.toml
demo_tests/: research.agent-test.yaml  test_demo_agent.py
docs/: demo-runbook.md
eval/: results.md  run_eval.py
examples/: research_agent.agent-test.yaml
examples/support_desk/: __init__.py  data.py  graph.py  tools.py
examples/support_desk/scripts/: render_graph.py  support_ui.py
examples/support_desk/support_tests/: refunds.agent-test.yaml
examples/support_desk/tests/: test_support_desk.py
scripts/: bootstrap_demo.sh  run_harness.py  run_harness.sh  verify_install.sh
src/agent_harness/: cli.py  results.py  runner.py  schema.py  scorers.py  suite_runner.py  trace.py
src/demo_agent/: corpus.py  graph.py  tools.py
tests/: conftest.py  fixture_agent.py  helpers.py  test_cli.py  test_schema.py  test_scorers.py  test_suite_runner.py  test_trace.py
tests/fixtures/: failing.agent-test.yaml  sample.agent-test.yaml
vscode-extension/: .vscodeignore  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
vscode-extension/src/: extension.ts  parseSuite.ts  report.ts  runner.ts  summaryHtml.ts  summaryPanel.ts  traceHtml.ts  tracePanel.ts
vscode-extension/test/: parseSuite.test.ts  report.test.ts  traceHtml.test.ts
